Faster deletes of subvolumes